fix alignment

--- a/packages/esm-patient-orders-app/src/order-favorites/drug-favorites-list.scss
+++ b/packages/esm-patient-orders-app/src/order-favorites/drug-favorites-list.scss
@@ -11,7 +11,7 @@
 .header {
   display: flex;
   align-items: center;
-  padding: 0 layout.$spacing-05;
+  padding: 0 0 0 layout.$spacing-05;
   background-color: $ui-03;
   border: none;
   width: 100%;
